<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".options"
    android:background="@drawable/popup_border"
    android:id="@+id/cstlOptions">

    <TextView
        android:id="@+id/tv50Coins"
        style="@style/PopupOptionsTextStyle"
        android:text="@string/Coins50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vwH1"
        style="@style/PopupHorizontalDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv50Coins" />


    <TextView
        android:id="@+id/tv100Coins"
        style="@style/PopupOptionsTextStyle"
        android:text="@string/Coins100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwH1" />

    <View
        android:id="@+id/vwH2"
        style="@style/PopupHorizontalDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv100Coins" />

    <TextView
        android:id="@+id/tv150Coins"
        style="@style/PopupOptionsTextStyle"
        android:text="@string/Coins150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwH2" />

    <ImageView
        android:id="@+id/imageView50Coins"
        style="@style/options_playImageStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/imagePopupPlay_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/tv50Coins"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cdPlay50Coins"
         />

    <ImageView
        android:id="@+id/imageView100Coins"
        style="@style/options_playImageStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/imagePopupPlay_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/tv100Coins"
        app:layout_constraintTop_toTopOf="@+id/vwH1"
        android:contentDescription="@string/cdPlay100Coins"
         />

    <ImageView
        android:id="@+id/imageView150Coins"
        style="@style/options_playImageStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/imagePopupPlay_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/tv150Coins"
        app:layout_constraintTop_toTopOf="@+id/vwH2"
        android:contentDescription="@string/cdPlay150Coins"
         />

</android.support.constraint.ConstraintLayout>